--- a/notebooks/realtime_detect_and_track.ipynb
+++ b/notebooks/realtime_detect_and_track.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:32:45.088782900Z",
-     "start_time": "2024-12-13T18:32:43.185023Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -28,28 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "class Visualizer:\n",
     "    def __init__(self,\n",
     "                 video_width,\n",
     "                 video_height,\n",
-    "                 save_video=False,\n",
-    "                 output_path='tracked_video.mp4'\n",
     "                 ):\n",
     "        \n",
     "        self.video_width = video_width\n",
     "        self.video_height = video_height\n",
-    "        self.save_video = save_video\n",
-    "        self.output_path = output_path\n",
-    "\n",
-    "        if self.save_video:\n",
-    "            fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "            self.video_writer = cv2.VideoWriter(self.output_path, fourcc, 30,\n",
-    "                                                (self.video_width, self.video_height))\n",
-    "        else:\n",
-    "            self.video_writer = None\n",
     "\n",
     "    def resize_mask(self, mask):\n",
     "        mask = torch.tensor(mask, device='cpu')\n",
@@ -58,7 +43,7 @@
     "                                               mode=\"bilinear\",\n",
     "                                               align_corners=False,\n",
     "                                               )\n",
-    "\n",
+    "        \n",
     "        return mask\n",
     "\n",
     "    def add_frame(self, frame, mask):\n",
@@ -72,38 +57,19 @@
     "            obj_mask = mask[i, 0, :, :]\n",
     "            frame[obj_mask] = [255, 105, 180]\n",
     "                \n",
-    "        self.display_frame_in_notebook(frame)\n",
-    "\n",
-    "    def display_frame_in_notebook(self, frame):\n",
     "        rgb_frame = Image.fromarray(frame)\n",
     "        clear_output(wait=True)\n",
-    "        display(rgb_frame)\n",
-    "\n",
-    "    def stop(self):\n",
-    "        if self.video_writer is not None:\n",
-    "            self.video_writer.release()"
+    "        display(rgb_frame)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:32:45.112280500Z",
-     "start_time": "2024-12-13T18:32:45.092733100Z"
-    }
+    "collapsed": false
    },
    "id": "68bf93105a7b2da1"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File ./TUD-Stadtmitte-raw.webm already exists, skipping download.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Download Example Video\n",
     "VIDEO_STREAM = \"./TUD-Stadtmitte-raw.webm\"\n",
@@ -118,17 +84,13 @@
     "    print(f\"File {VIDEO_STREAM} already exists, skipping download.\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:32:56.420900100Z",
-     "start_time": "2024-12-13T18:32:56.420408300Z"
-    }
+    "collapsed": false
    },
    "id": "bb1780f6714552fd"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Set SAM2 Configuration\n",
@@ -140,17 +102,13 @@
     "DEVICE = 'cuda:0'"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:33:55.157070200Z",
-     "start_time": "2024-12-13T18:33:55.153560Z"
-    }
+    "collapsed": false
    },
    "id": "26eb66ca244d0f0"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Open Video Stream\n",
@@ -161,23 +119,17 @@
     "\n",
     "# For real-time visualization\n",
     "visualizer = Visualizer(video_width=video_width,\n",
-    "                        video_height=video_height,\n",
-    "                        save_video=True,\n",
-    "                        output_path=OUTPUT_PATH\n",
+    "                        video_height=video_height\n",
     "                        )"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:34:17.833137900Z",
-     "start_time": "2024-12-13T18:34:17.826132200Z"
-    }
+    "collapsed": false
    },
    "id": "d909a1eff131e1e1"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "sam = build_sam2_object_tracker(num_objects=NUM_OBJECTS,\n",
@@ -188,17 +140,13 @@
     "                                )"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:34:21.328836Z",
-     "start_time": "2024-12-13T18:34:19.005545200Z"
-    }
+    "collapsed": false
    },
    "id": "f4394d77e3b63645"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "available_slots = np.inf\n",
@@ -236,16 +184,11 @@
     "            sam_out = sam.track_all_objects(img=img)\n",
     "            \n",
     "        visualizer.add_frame(frame=frame, mask=sam_out['pred_masks'])\n",
-    "\n",
-    "visualizer.stop()\n",
+    "        \n",
     "video_stream.release()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-13T18:36:22.149210100Z",
-     "start_time": "2024-12-13T18:36:22.102510600Z"
-    }
+    "collapsed": false
    },
    "id": "9df2d1a1e04cfa1a"
   },
